# pseudo-gc

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-run.yml
src/: allocator.cpp  allocator.h  cell.cpp  cell.h  pgc.cpp  pseudo-collector.cpp  pseudo-collector.h  pseudo-mutator.cpp  pseudo-mutator.h
